# lyra

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
examples/: compilation-test.lyra  test.ast.json  test.lyra
src/: main.c
src/common/: depth_map.c  depth_map.h  enums.h  hashmap.c  hashmap.h  list.c  list.h  maps.h  stack.c  stack.h  strings.c  strings.h
src/debugging/: mem_checks.h  printing_visitor.c  printing_visitor.h  to_json_visitor.c  to_json_visitor.h
src/lexer/: lexer.c  lexer.h
src/parser/: ast.c  ast.h  parser.c  parser.h  parser_error.c  parser_error.h
src/typechecker/: typechecker.c  typechecker.h  typedefs.c  typedefs.h  types.c  types.h
src/vm/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  lines.c  lines.h  value.c  value.h  vm.c  vm.h
test/: main.c  test.h  test_utils.c  test_utils.h
test/common/: list_test.c  list_test.h
test/compiler/: binary_tests.c  binary_tests.h  compiler_test_utils.c  compiler_test_utils.h  compiler_tests.c  compiler_tests.h  literal_tests.c  literal_tests.h  unary_tests.c  unary_tests.h
test/lexer/: lexer_test.c  lexer_test.h
test/parser/: array_tests.c  array_tests.h  ast_test.c  ast_test.h  block_tests.c  block_tests.h  func_decl_tests.c  func_decl_tests.h  ifelse_tests.c  ifelse_tests.h  invocation_tests.c  invocation_tests.h  literal_tests.c  literal_tests.h  object_tests.c  object_tests.h  parser_test.c  parser_test.h  type_decl_tests.c  type_decl_tests.h  unary_binary_tests.c  unary_binary_tests.h  utils.c  utils.h  val_decl_tests.c  val_decl_tests.h
test/typechecker/: array_tests.c  array_tests.h  binary_tests.c  binary_tests.h  block_tests.c  block_tests.h  funcdecl_tests.c  funcdecl_tests.h  ifelse_tests.c  ifelse_tests.h  invocation_tests.c  invocation_tests.h  literal_tests.c  literal_tests.h  objectliteral_tests.c  objectliteral_tests.h  typechecker_test_utils.h  typechecker_tests.c  typechecker_tests.h  typedecl_tests.c  typedecl_tests.h  types_tests.c  types_tests.h  unary_tests.c  unary_tests.h  valdecl_tests.c  valdecl_tests.h
